<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.talagasoft.gojek.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                ads:srcCompat="@drawable/head" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:orientation="vertical"
                android:visibility="visible"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cmdBike"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:drawableTop="@drawable/bike"
                        android:elevation="0dp"
                        android:onClick="onClick"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/cmdCar"
                        style="@style/DashboardButton"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:drawableTop="@drawable/car"
                        android:elevation="6dp"
                        android:onClick="onClick"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/cmdFood"
                        style="@style/DashboardButton"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:drawableTop="@drawable/food"
                        android:elevation="6dp"
                        android:onClick="onClick"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cmdPaket"
                        style="@style/DashboardButton"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignBottom="@+id/btn_schedule"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:drawableTop="@drawable/paket"
                        android:elevation="6dp"
                        android:onClick="onClick"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/cmdReport"
                        style="@style/DashboardButton"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignBottom="@+id/btn_schedule"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:drawableTop="@drawable/report"
                        android:elevation="6dp"
                        android:onClick="onClick"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/cmdProfil"
                        style="@style/DashboardButton"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignBottom="@+id/btn_schedule"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:drawableTop="@drawable/profil"
                        android:elevation="6dp"
                        android:onClick="onClick"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|end"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingRight="20dp">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/point_anda"
                                android:textColor="@android:color/background_dark" />

                            <TextView
                                android:id="@+id/point"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/colorPrimary"
                                android:textSize="24sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingRight="20dp">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="154dp"
                                android:layout_height="wrap_content"
                                android:text="@string/balance"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/deposit"
                                android:layout_width="167dp"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@android:color/black"
                                android:textSize="24sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView131"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/driver_accepted"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/driver"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Driver Name"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/cmdRating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:background="@android:color/transparent"
                                android:drawableLeft="@android:drawable/btn_star_big_on"
                                android:textAllCaps="false"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
